--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -43,9 +43,11 @@
 			{{ range .Paginator.Pages }}
 			<div class="col-lg-4">
 				<div class="blog-page__item">
+					{{ if .Params.featureImage }}
 					<div class="blog-page__item-thumb">
 						<img src="{{ .Params.featureImage | absURL }}" alt="post-image">
 					</div>
+					{{ end }}
 					<div class="blog-page__item-content bg-white">
 						<span class="small">{{ .PublishDate.Format "January 2, 2006" }}</span>
 						<h5 class="mb-0">
