--- a/layouts/partials/blogSection.html
+++ b/layouts/partials/blogSection.html
@@ -23,9 +23,11 @@
 			{{ range first 3 (where $.Site.RegularPages "Type" "!=" "portfolio") }}
 			<div class="col-lg-4">
 				<div class="blog-preview__item">
+					{{ if Params.featureImage }}
 					<div class="blog-preview__item-thumb">
 						<img src="{{ .Params.featureImage | absURL }}" alt="post-image">
 					</div>
+					{{ end }}
 					<div class="blog-preview__item-content bg-white">
 						<span class="small">{{ .PublishDate.Format "January 2, 2006" }}</span>
 						<h5 class="mb-0">
